--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,6 +1,6 @@
-deploy.ant.properties.file=/home/victor/.netbeans/8.0.2/tomcat80.properties
+deploy.ant.properties.file=/home/victor/snap/netbeans/common/data/11.0/tomcat90.properties
 j2ee.server.domain=/home/victor/.netbeans/8.0.2/apache-tomcat-8.0.15.0_base
-j2ee.server.home=/usr/local/apache-tomcat-8.0.15
-j2ee.server.instance=tomcat80:home=/usr/local/apache-tomcat-8.0.15:base=apache-tomcat-8.0.15.0_base
+j2ee.server.home=/opt/apache-tomcat-9.0.20
+j2ee.server.instance=tomcat90:home=/opt/apache-tomcat-9.0.20
 selected.browser=default
-user.properties.file=/home/victor/.netbeans/8.0.2/build.properties
+user.properties.file=/home/victor/snap/netbeans/common/data/11.0/build.properties
