Creation of domain classes.

--- a/src/ChurchSystem.Data/ChurchSystem.Data.csproj
+++ b/src/ChurchSystem.Data/ChurchSystem.Data.csproj
@@ -5,9 +5,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Context\" />
     <Folder Include="Mappings\" />
     <Folder Include="Repository\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="microsoft.entityframeworkcore" Version="5.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ChurchSystem.Business\ChurchSystem.Business.csproj" />
   </ItemGroup>
 
 </Project>
