Data context mapping.

--- a/src/ChurchSystem.App/appsettings.json
+++ b/src/ChurchSystem.App/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-ChurchSystem.App-387FEDBA-BECF-41FC-B78C-D248DF907F35;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=ChurchSystemDataBase;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "DefaultConnection": "Server=DESKTOP-4B8AEOR\\SQLEXPRESS;Database=ChurchSystemDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
