--- a/src/ChurchSystem.App/ChurchSystem.App.csproj
+++ b/src/ChurchSystem.App/ChurchSystem.App.csproj
@@ -14,4 +14,9 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.1" />
   </ItemGroup>
 
+
+  <ItemGroup>
+    <ProjectReference Include="..\ChurchSystem.Data\ChurchSystem.Data.csproj" />
+  </ItemGroup>
+
 </Project>
