--- a/src/ChurchSystem.Data/ChurchSystem.Data.csproj
+++ b/src/ChurchSystem.Data/ChurchSystem.Data.csproj
@@ -1,16 +1,18 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Mappings\" />
     <Folder Include="Repository\" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="microsoft.entityframeworkcore" Version="5.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.1" />
+    <PackageReference Include="microsoft.entityframeworkcore" Version="3.1.1" />
+    <PackageReference Include="microsoft.entityframeworkcore.relational" Version="3.1.1" />
+    <PackageReference Include="microsoft.entityframeworkcore.sqlserver" Version="3.1.1" />
   </ItemGroup>
 
   <ItemGroup>
