Implementar ajustes no crud

--- a/src/ChurchSystem.App/appsettings.json
+++ b/src/ChurchSystem.App/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    //"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=ChurchSystemDataBase;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "DefaultConnection": "Server=DESKTOP-4B8AEOR\\SQLEXPRESS;Database=ChurchSystemDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=localhost;Database=ChurchSystemDataBase;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"DefaultConnection": "Server=DESKTOP-4B8AEOR\\SQLEXPRESS;Database=ChurchSystemDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
